--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@
 
 * {  
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 *:focus {
@@ -60,8 +62,6 @@ body {
     background-color: #f0f3f3;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    padding: 0;
     height: 100%;
     text-align: center;
 }
@@ -310,11 +310,13 @@ img {
 
 .about-description {
     flex: 50%;
+    padding: clamp(0.4rem, 3vw, 2rem);
+    margin: 10px;
 }
 
 .about-photo {
     flex: 50%;
-    margin: 30px 10px;
+    margin: 20px 10px;
     padding: 0 20px;
 }
 
@@ -324,11 +326,10 @@ img {
 }
 
 .about p {
-    padding: 0 10px;
-    font-size: clamp(0.4rem, 6vw, 1.2rem);
+    font-size: clamp(1rem, 1.5vw, 1.2rem);
     font-weight: 500;
-    line-height: 1.5;
-    margin: 20px 10px;
+    line-height: 1.4rem;
+    
 }
 
 .about  h1 {
